# bounce-tales

./: .gitignore  CMakeLists.txt  README.md  download_deps.sh  install_deps.bat  install_deps.sh
.VSCodeCounter/2025-03-03_15-41-44/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-03-08_13-50-00/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/textures/: JumpPad.json  enemy.json  grass.json  particles.json  redy_emotions.json  rocks.json  switch.json
assets/ui/: editor.txt  level.txt  levelname.txt  menu.txt  pause.txt  settings.txt  text_prompt.txt
extra/: settings.ini
extra/levels/: 1.json  2.json  9.json  debug.json  debug_two.json  menu.json  new_template.json  test.txt
scripts/: all_points.txt  control_points.txt  curve.py  debug_0.txt  debug_0_2.txt  debug_2.txt  debug_3.txt  space.py  test.py
src/: main.cpp
src/components/: animation.cpp  collidable.cpp  collidable_component.cpp  curved_shape.cpp  physical.cpp  physical_component.cpp  primitive_rectangle.cpp  primitive_sprite.cpp  sound_component.cpp  sound_player.cpp  transformable.cpp
src/core/: asset_manager.cpp  editor.cpp  game.cpp  gui_manager.cpp  music_player.cpp  object_manager.cpp  settings.cpp  sound_manager.cpp  stats.cpp
src/drawables/: animation.cpp  curved_shape.cpp  primitive_sprite.cpp
src/extra/: collision_calculator.cpp  collision_math.cpp  ear_clipping.cpp  earcut.cpp  music_player.cpp  randomizer.cpp  spline.cpp  theme.cpp  timer.cpp
src/include/: animation.hpp  asset_manager.hpp  background.hpp  background_object.hpp  camera.hpp  collidable.hpp  collidable_component.hpp  collision_calculator.hpp  collision_math.hpp  curved_shape.hpp  distant_object.hpp  door.hpp  drawable.hpp  ear_clipping.hpp  earcut.hpp  editor.hpp  enemy.hpp  game.hpp  game_object.hpp  game_object_component.hpp  ground.hpp  gui_manager.hpp  jump_pad.hpp  level.hpp  music_player.hpp  object_manager.hpp  particle.hpp  physical.hpp  physical_component.hpp  platform.hpp  player.hpp  primitive_rectangle.hpp  primitive_sprite.hpp  randomizer.hpp  rock.hpp  settings.hpp  simple_object.hpp  sound_component.hpp  sound_manager.hpp  sound_player.hpp  (+11 more)
src/objects/: background.cpp  background_object.cpp  camera.cpp  distant_object.cpp  door.cpp  enemy.cpp  game_object.cpp  ground.cpp  jump_pad.cpp  particle.cpp  platform.cpp  player.cpp  rock.cpp  simple_object.cpp  spikes.cpp  switch.cpp  trigger_object.cpp  water.cpp  wind.cpp
